added datatables to tuitions

--- a/app/views/tuitions/list.html.haml
+++ b/app/views/tuitions/list.html.haml
@@ -1,17 +1,18 @@
 .tuitions
-  List of tuitions payment deadlines:
-  %table.table.table-condensed
+  List of upcoming tuition payment deadlines:
+  %table.table.table-condensed#tuitions_data
     %thead
       %tr
         %th.full-name= 'Students'
         - tuitions.order(:deadline).each do |tuition|
           %th.deadline= tuition.deadline
     %tbody
-    - students.each do |student|
-      %tr
-        %td= student.decorate.full_name
-        - tuitions.order(:deadline).each do |tuition|
-          - if tuition.students.exists?(student)
-            %td= "payed"
-          - else
-            %td= "unpaid"
+      - students.each do |student|
+        %tr
+          %td= student.decorate.full_name
+          - tuitions.order(:deadline).each do |tuition|
+            - if tuition.students.exists?(student)
+              %td= "payed"
+            - else
+              %td= "unpaid"
+        
