--- a/app/views/tuitions/index.html.haml
+++ b/app/views/tuitions/index.html.haml
@@ -13,7 +13,7 @@
           %td= student.decorate.full_name
           - tuitions.order(:deadline).each do |tuition|
             - if tuition.students.exists?(student)
-              %td= "payed"
+              %td= "paid"
             - else
               %td= "unpaid"
         
